# registry

./: .env.example  .env.prod.example  .gitignore  ARCHIVE.md  DEPLOY.md  README.docker.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  justfile
.github/workflows/: deploy-api.yml  deploy-web.yml  deploy.yml  infra.yml
api/: Dockerfile  Dockerfile.lambda  Makefile  go.mod
api/cmd/registry/: main.go
api/cmd/seed/: main.go
api/internal/audit/: audit_test.go  log.go
api/internal/auth/: device.go  middleware.go  requireauth_test.go
api/internal/config/: config.go  config_test.go
api/internal/db/: models.go  querier.go  queries.sql  queries.sql.go  queries_test.go  schema.sql
api/internal/docker/: docker_test.go  handler.go  service.go
api/internal/email/: handler.go  ses.go
api/internal/health/: handler_test.go
api/internal/middleware/: cors.go  middleware_test.go
api/internal/orgs/: handler.go  orgs_test.go
api/internal/search/: handler.go  handler_test.go
api/internal/testutil/: testutil.go
deploy/: Caddyfile  docker-compose.yml
docs/: oauth-setup.md
infra/: RUNBOOK.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/modules/ec2/: main.tf  (+1 more)
scripts/: bootstrap-ec2.sh  seed-dev.sh
test-plugin/: README.md  pyproject.toml
test-plugin/devsper_plugin_demo/: __init__.py
web/: .env.production  Dockerfile  Dockerfile.lambda  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
web/server/: auth.d.ts  auth.js  auth.ts
web/src/: index.css  types.ts
(+54 files in other folders)
