[project]
name = "devsper-plugin-demo"
version = "0.9.0"
description = "Minimal devsper plugin for testing the registry (one demo tool)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "devsper",
]

[project.entry-points."devsper.plugins"]
demo = "devsper_plugin_demo:load"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devsper_plugin_demo"]
